Customize styles and layout

--- a/source/stylesheets/_settings.scss
+++ b/source/stylesheets/_settings.scss
@@ -1,49 +1,27 @@
-// Source: https://github.com/asciidoctor/asciidoctor-stylesheet-factory/blob/2ad3000fd596b4673b6576e42df448d531982502/sass/settings/_asciidoctor.scss
+// Body (IMPORTANT $body-* and $base-* variables must be defined above the defaults import)
 
-// Color Palette
-
-// rgba(0,0,0,.9) - deep black
-// rgba(0,0,0,.85) - black
-// rgba(0,0,0,.8) - print black
-// rgba(0,0,0,.75) - light black
-// rgba(0,0,0,.6) - muted black
-// #ba3925 - orange
-// #7a2518 - dark orange
-// #3a120c - maroon
-// #2561ba - blue
-// #f8f8f7 - warm beige
-// #f7f7f8 - cool beige
-// #f7f8f7 - tinted beige
-// #ddddd8 - light gray
-// #d8d8d8 - lighter gray
-// #efefed - very light gray
-
-// Body (IMPORTANT $body-* variables must be defined above the defaults import)
-
-$body-bg: white;
-$body-font-color: rgba(0,0,0,0.8);
-$body-font-family: "Noto Serif", "DejaVu Serif", serif;
+$base-font-size: 18px;
 
 @import "defaults";
 
 // Default Overrides
 
-$primary-color: darken(#2561ba, 5%);
-$alert-color: lighten(#3a120c, 15%); // $code-color is 15% darker than $alert-color, so we lighten here by 15%
+$primary-color: #bf0422;
 $global-radius: 4px;
 $panel-bg: #f8f8f7;
-$panel-font-color: rgba(0,0,0,0.75);
+$panel-font-color: rgba(0, 0, 0, 0.75);
 
 // Headings
 
-$header-font-family: "Open Sans", "DejaVu Sans", sans-serif;
-$header-font-weight: 300;
-$header-font-color: #ba3925;
+$header-font-family: $body-font-family;
+$header-font-weight: 600;
+$header-font-color: $body-font-color;
 $header-line-height: 1.2;
-$header-top-margin: 1em;
-$header-word-spacing: -0.05em;
-$title-font-color: rgba(0,0,0,0.85);
+$header-bottom-margin: 0.8em;
+
+$title-font-color: rgba(0, 0, 0, 0.85);
 $title-font-weight: $header-font-weight;
+
 $subheader-font-family: $body-font-family;
 $subheader-font-size: 1rem;
 $subheader-font-color: darken($header-font-color, 15%); // resolves to #7a2518
@@ -52,26 +30,30 @@ $subheader-font-style: italic;
 $subheader-line-height: 1.45;
 $subheader-top-margin: 0;
 $subheader-bottom-margin: 0.25em;
-$sidebar-header-align: center;
-$sect-divider-size: 1px;
-$sect-divider-style: solid;
-$sect-divider-color: #efefed;
-$hr-border-color: #ddddd8;
 
-// Paragraphs
-// FIXME doesn't support rem math
-//$paragraph-font-size: 1.0625rem; // result of emCalc(17px) converted to rem (18px is 1.125em)
+$sidebar-header-align: center;
+
+$sect-divider-style: none;
+
+$h1-font-size: 2em;
+$h2-font-size: 1.75em;
+$h3-font-size: 1.52em;
+$h4-font-size: 1.32em;
+$h5-font-size: 1.15em;
+$h6-font-size: 1em;
+
+// Paragprah
+
+$paragraph-line-height: 1.5;
 
 // Inline Code
 
-$code-font-family: "Droid Sans Mono", "DejaVu Sans Mono", monospace;
-// NOTE will need to adjust code-font-size if we bump p font-size to 1.125em
-//$code-font-size: 0.95em;
-$code-font-size: emCalc(15px);
+$code-font-family: Consolas, "Liberation Mono", Courier, monospace;
+$code-font-size: 1em;
 $code-font-weight: normal;
 // FIXME don't forget about code in a table cell
 $code-line-height: 1.45;
-$code-color: rgba(0,0,0,0.9);
+$code-color: $body-font-color;
 $code-bg-color: #f7f7f8;
 $code-padding: 0.1em 0.5ex;
 $code-word-spacing: -0.15em;
@@ -80,16 +62,18 @@ $code-text-rendering: optimizeSpeed;
 // Code Blocks
 // *Recommended highlight.js themes: magula, default, docco
 
-$pre-font-family: "Droid Sans Mono", "DejaVu Sans Mono", "Monospace", monospace;
-$pre-font-color: rgba(0,0,0,0.9);
-$pre-border-size: null;
-$pre-bg: #f7f7f8;
-$pre-padding: emCalc(16px);
-$pre-line-height: 1.45;
+$pre-font-family: $code-font-family;
+$pre-font-color: $code-color;
+$pre-font-size: $code-font-size;
+$pre-line-height: $code-line-height;
+$pre-bg: $code-bg-color;
+$pre-border-size: 1px;
+$pre-border-style: solid;
+$pre-padding: 0.3em 0.6em;
 
 // Links
 
-$anchor-text-decoration: underline;
+$anchor-text-decoration-hover: underline;
 
 // Lists
 
@@ -100,7 +84,7 @@ $definition-list-margin-bottom: emCalc(20px);
 // Blockquotes
 
 $blockquote-font-color: $title-font-color;
-$blockquote-cite-font-color: rgba(0,0,0,0.6);
+$blockquote-cite-font-color: rgba(0, 0, 0, 0.6);
 $blockquote-cite-font-size: emCalc(15px);
 
 // Tables
