--- a/source/_layouts/layout.erb
+++ b/source/_layouts/layout.erb
@@ -1,18 +1,29 @@
 <!doctype html>
 <html>
   <head>
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
-    <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "Middleman" %></title>
+    <title><%= current_page.data.title || 'BigClown' %></title>
 
     <%= stylesheet_link_tag :main %>
-    <%= javascript_include_tag :all %>
   </head>
 
-  <body class="<%= page_classes %>">
-    <%= yield %>
+  <body>
+    <header>
+      <%= partial '_layouts/header' %>
+    </header>
+
+    <article class="main-content <%= page_classes %>">
+      <h1>
+        <%= current_page.data.title %>
+      </h1>
+      <%= yield.presence || 'This page is empty' %>
+    </article>
+
+    <footer>
+      <%= partial '_layouts/footer' %>
+    </footer>
   </body>
 </html>
