Prepare top-bar in header

--- a/source/_layouts/_header.erb
+++ b/source/_layouts/_header.erb
@@ -1,3 +1,8 @@
 <a class="logo" href="https://www.bigclown.com/">
   <%= image_tag 'bigclown-logo.png', alt: 'BigClown - Open-Source Electronics' %>
 </a>
+<div class="top-bar">
+  <a href="#">
+    Placeholder
+  </a>
+</div>
