--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -13,23 +13,33 @@ header {
   .logo {
     display: block;
     margin: 0 auto;
-    padding: 0.8em;
+    padding: 0.6em 0 0.4em 0;
     width: 10em;
   }
+}
+
+.top-bar {
+  padding: 0.3em 1.5em 0.4em 1.5em;
+  border-top: 1px solid rgba(#fff, 0.2);
+  text-align: right;
+  font-size: 0.85em;
 }
 
 footer {
   padding: 1em 0;
   background-color: #1b1d20;
-  color: #eee;
   text-align: center;
-  font-size: 0.9em;
+  font-size: 0.85em;
   font-weight: 500;
+}
+
+header, footer {
+  color: rgba(#fff, 0.8);
 
   a, a:visited {
-    color: #eee;
+    color: rgba(#fff, 0.8);
   }
-  a:hover {
+  a:hover, a:active {
     color: white;
   }
 }
