Add link "Improve this page" to top-bar

--- a/source/_layouts/_header.erb
+++ b/source/_layouts/_header.erb
@@ -2,7 +2,7 @@
   <%= image_tag 'bigclown-logo.png', alt: 'BigClown - Open-Source Electronics' %>
 </a>
 <div class="top-bar">
-  <a href="#">
-    Placeholder
+  <a href="<%= github_edit_link %>" rel="external" title="Edit on GitHub">
+    Improve this page
   </a>
 </div>
