Add icon for "Improve this page" and make it more responsive

--- a/source/_layouts/_header.erb
+++ b/source/_layouts/_header.erb
@@ -3,6 +3,7 @@
 </a>
 <div class="top-bar">
   <a href="<%= github_edit_link %>" rel="external" title="Edit on GitHub">
-    Improve this page
+    <%= use_icon 'pencil' %>
+    <span class="icon-label">Improve this page</span>
   </a>
 </div>
