--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -23,6 +23,16 @@ header {
   border-top: 1px solid rgba(#fff, 0.2);
   text-align: right;
   font-size: 0.85em;
+
+  @media (max-width: $small-screen) {
+    .icon {
+      width: 1.5em;
+      height: 1.5em;
+    }
+    .icon-label {
+      font-size: 0;
+    }
+  }
 }
 
 footer {
@@ -53,6 +63,15 @@ h1 {
   max-width: 760px;
   margin: 3em auto 1em auto;
   flex: 1;
+}
+
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
 }
 
 
