Fix style of links in header and footer
In some edge cases the "Improve this page" link was displayed as red,
because of missing a:focus rule and odd problem with rules specificity.
Also a:visited is not needed here.

--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -46,10 +46,10 @@ footer {
 header, footer {
   color: rgba(#fff, 0.8);
 
-  a, a:visited {
+  a {
     color: rgba(#fff, 0.8);
   }
-  a:hover, a:active {
+  a:active, a:focus, a:hover {
     color: white;
   }
 }
