Don't underline links in top-bar when only icon is displayed

--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -32,6 +32,9 @@ header {
     .icon-label {
       font-size: 0;
     }
+    a:active, a:focus, a:hover {
+      text-decoration: none;
+    }
   }
 }
 
